...
    
    // MARK: - Toolbar
    
    @ToolbarContentBuilder
    private var toolbar: some ToolbarContent {
        ToolbarItem(placement: .navigationBarLeading) {
            BackButtonView(iconName: UIDevice.isiPad ? "xmark" : "chevron.left") {
                coordinator.closeModal()
            }
        }
    }
    
    // MARK: - Section Header
...
    // MARK: - Notices
    
    private var noticeMessages: some View {
        Button("Messages  (\(noticevm.unreadCount)/\(noticevm.notices.count))") {
            coordinator.pushModal(.notices)
        }
        .accessibilityIdentifier("MessagesButton")
        .customListRowStyle(
            iconName: "message",
            iconWidth: iconSize
        )
    }
 
    // MARK: - Materials Management
  
...
