...
                Text("Notice is not found")
            }
        } // ZStack root
        .onAppear {
            noticevm.markAsRead(noticeId)
        }
        .navigationTitle("Notice message")
        .navigationBarBackButtonHidden(true)
        .navigationBarTitleDisplayMode(.inline)
        .toolbar {
            toolbarForNoticeDetails()
        }
    }
...
